Revision history for Bytes::Random::Secure

0.26 1111-01-01
  - Improved a test comment in t/27....t.  Removed a comment paragraph that
    isn't relevant now that the timing has been removed.
  - POD edits.

0.25 2012-02-23
  - Removed the speed test / fall-back from t/27-fips140-1.t; it's unnecessary,
    and could cause divide by zero errors on really fast systems.

0.24 2012-02-22
  - Added a small explanation of Test::Warn optional dependency to the
    DEPENDENCIES section of the POD.  Most of the explanation is in the
    INSTALLATION section.
  - Added t/27-fips140-1.t: Code taken directly from Dana Jacobsen's
    Crypt::Random::TESHA2 module's test suite.  This test implements the
    FIPS 140-1 tests.  See http://csrc.nist.gov/publications/fips/fips1401.htm
  - Removed "slow" tests from t/20-functions.t: The FIPS-140 tests are superior
    and make the older slow tests unnecessary.

0.23 2012-02-11
  - Clarified the (small) magnitude of the performance issues surrounding
    random_string_from() (MODULO BIAS section of POD). (DANAJ's suggestion.)
  - Added a test for _closest_divisor().
  - Added a POD section discussing ISAAC's strengths.
  - Increased SEED_MAX bits from 512 (arbitrary) to 8192 (theoretical
    max for ISAAC).  Added explanation to POD, and adjusted tests.
  - Minor corrections in # code comments (accuracy).
  - Added irand() object method per Dana Jacobsen's request and
    code contribution.
  - POD and tests for irand().
  - Test::Warn is now an optional dependency.  By ensuring that Test::Warn is
    installed, the module has 100% test coverage (per Devel::Cover).

0.22 2013-01-29
  - Implement suggestions from Dana Jacobsen (Unicode tests, specify minimum 
    versions for dependencies, document installation on older Perls).
  - POD correction -- Removed reference to config_seed.
  - POD: Added INSTALLATION section to address issues with older Perls.
  - POD: Clarified "CAVEATS" with discussion of Unicode support in pre-5.8.9.