@@ -4,6 +4,7 @@ Revision history for Bytes::Random::Secure
   - Improved a test comment in t/27....t.  Removed a comment paragraph that
     isn't relevant now that the timing has been removed.
   - POD edits.
+  - Add "FORK AND THREAD SAFETY section to CAVIATS.
 
 0.25 2012-02-23
   - Removed the speed test / fall-back from t/27-fips140-1.t; it's unnecessary,
